--- a/build_spec.yml
+++ b/build_spec.yml
@@ -13,7 +13,7 @@ steps:
     command: |
       version=2
       sleep 480
-      data > sleep.txt
+      date > sleep.txt
       
 outputArtifacts:
 
